[package]
name = "undertow-protocol"
version = "0.1.1"
edition = "2021"
authors = ["Daniil Verba <daniilverba123@gmail.com>"]
description = "Core protocol library for Undertow P2P network"
license = "AGPL-3.0"
repository = "https://gitverse.ru/daniil-verba/undertow-protocol"

[lib]
name = "undertow_protocol"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
rand = "0.8"
hex = "0.4"
crc32fast = "1.3"
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Опциональные зависимости для UI (только для client)
# ratatui = { version = "0.24", optional = true }
# crossterm = { version = "0.27", optional = true }
# chrono = { version = "0.4", optional = true }

[features]
default = ["network", "crypto", "protocol", "storage"]
beacon = ["network", "crypto", "protocol"]
client = ["network", "crypto", "protocol", "storage"]
# ui = ["dep:ratatui", "dep:crossterm", "dep:chrono"]

# Внутренние фичи для организации кода
network = []
crypto = []
protocol = []
storage = []
