[package]
name = "undertow-protocol"
version = "0.1.2"
edition = "2021"
authors = ["Daniil Verba <daniilverba123@gmail.com>"]
description = "Core protocol library for Undertow P2P network"
license = "MIT"
repository = "https://github.com/daniil-verba/undertow-protocol"

[lib]
name = "undertow_protocol"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.5"
anyhow = "1.0"
thiserror = "1.0"

# Стабильная версия iroh 1.0 (включает Endpoint, EndpointId, presets)
iroh = "1.0"

sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
rand = "0.8"
hex = "0.4"
crc32fast = "1.3"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.5"

ratatui = { version = "0.24", optional = true }
crossterm = { version = "0.27", optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = ["network", "crypto", "protocol", "storage"]
beacon = ["network", "crypto", "protocol"]
client = ["network", "crypto", "protocol", "storage"]
ui = ["dep:ratatui", "dep:crossterm", "dep:chrono"]

network = []
crypto = []
protocol = []
storage = []
